--- a/css/popup.css
+++ b/css/popup.css
@@ -1,66 +1,70 @@
-body {
-  width: 500px;
-  height: 400px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
+.interval {
+  margin-top: 8px;
 }
-
-.hello {
-  font-size: 14px;
-  margin-bottom: 4px;
-  font-weight: 500;
+.screen {
+  width: 300px;
+  height: 160px;
 }
-
-.logList {
-  width: 400px;
-  height: 300px;
-  overflow-y: auto;
+.box {
   display: flex;
-  flex-direction: column;
-  padding: 6px 20px;
-  border: 1px solid #666;
-  border-radius: 8px;
-  font-size: 16px;
-  color: #444;
 }
-
-.title {
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  font-weight: bold;
+.left {
+  width: 100px;
 }
-
-.log {
-  display: flex;
-  width: 100%;
-  flex-direction: row;
-  align-items: center;
-}
-
-.log > .dot{
-  width: 10px;
-  height: 10px;
-  border-radius: 50%;
-  background-color: #333;
-  margin-right: 6px;
- }
-
-.log > p {
-  display: flex;
+.right {
   flex: 1;
-  align-items: center;
 }
 
-.log > .btn {
-  display: flex;
-  width: 30px;
-  justify-content: center;
-  align-items: center;
+.screensort-menu {
+height:160px;
+width:__MSG_menuPopupWidth__px; 
+border:0;
+padding: 0px;
+/* background-color: #EEE; */
 }
 
-.log > .btn > button {
-  cursor: pointer;
+.screensort-menu li {
+background-color: transparent;
+width:__MSG_menuPopupWidth__px; 
+white-space: nowrap; 
+height: 30px; 
+padding: 0px; 
+margin: 0px; 
+display: block; 
+cursor: default;
+ border: 0px solid blue;
+}
+
+.screensort-menu li:hover, .screensort-menu li:hover td {
+background-color: #EEE; 
+color: #000;
+}
+
+.screensort-menu li:hover.seperator {
+background-color:transparent
+}
+
+.screensort-menu li.seperator {
+height: 10px;
+}
+
+.screensort-menu li td.menu-text {
+width: 100px; height: 30px; font-size: 14px;text-indent:0px; 
+}
+.screensort-menu li td.menu-text .menu-text-btn {
+  background-color: #fff;
+  color: #000;
+  border: 0px;
+}
+.screensort-menu li td.menu-text .menu-text-btn:hover {
+  background-color: #EEE; 
+  color: #000;
+}
+
+.screensort-menu li td.menu-icon-users {
+background: transparent url(images/icon-users-black-small.png) center center no-repeat;
+}
+
+.screensort-menu li td.menu-icon-options {
+background: transparent url(images/icon-options-small.png) center top no-repeat;
 }
